--- a/Ekar/Scenes/Vehicle/Vehicle.storyboard
+++ b/Ekar/Scenes/Vehicle/Vehicle.storyboard
@@ -19,16 +19,28 @@
                         <sections>
                             <tableViewSection id="hAY-ci-eH1">
                                 <cells>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="eOD-eb-1w4" userLabel="Carousel">
-                                        <rect key="frame" x="0.0" y="44.5" width="414" height="43.5"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" rowHeight="220" id="eOD-eb-1w4" userLabel="Carousel">
+                                        <rect key="frame" x="0.0" y="44.5" width="414" height="220"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="eOD-eb-1w4" id="SC8-bW-EYH">
-                                            <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="220"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="mVi-EI-ole" customClass="CarouselView" customModule="Ekar" customModuleProvider="target">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="220"/>
+                                                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                </view>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="mVi-EI-ole" firstAttribute="leading" secondItem="SC8-bW-EYH" secondAttribute="leading" id="GRH-ud-eKX"/>
+                                                <constraint firstAttribute="trailing" secondItem="mVi-EI-ole" secondAttribute="trailing" id="OlI-7u-05k"/>
+                                                <constraint firstItem="mVi-EI-ole" firstAttribute="top" secondItem="SC8-bW-EYH" secondAttribute="top" id="i5Y-bQ-9jQ"/>
+                                                <constraint firstAttribute="bottom" secondItem="mVi-EI-ole" secondAttribute="bottom" id="jSa-gy-uJy"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="cph-Jv-CnK" userLabel="Year-Color">
-                                        <rect key="frame" x="0.0" y="88" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="264.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="cph-Jv-CnK" id="hAd-iz-OXy">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -36,7 +48,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="afr-BK-9bN" userLabel="Price Contract">
-                                        <rect key="frame" x="0.0" y="131.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="308" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="afr-BK-9bN" id="lVE-eo-CJy">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -44,7 +56,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="AIX-Jk-n7f" userLabel="Tenure">
-                                        <rect key="frame" x="0.0" y="175" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="351.5" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="AIX-Jk-n7f" id="pr2-kT-WJu">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -52,7 +64,7 @@
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                     <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="3EW-xS-cFV" userLabel="Booking Fee">
-                                        <rect key="frame" x="0.0" y="218.5" width="414" height="43.5"/>
+                                        <rect key="frame" x="0.0" y="395" width="414" height="43.5"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="3EW-xS-cFV" id="tpl-Ge-LtL">
                                             <rect key="frame" x="0.0" y="0.0" width="414" height="43.5"/>
@@ -68,6 +80,9 @@
                         </connections>
                     </tableView>
                     <navigationItem key="navigationItem" id="jwN-l3-aME"/>
+                    <connections>
+                        <outlet property="carouselView" destination="mVi-EI-ole" id="NN4-MB-aED"/>
+                    </connections>
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="WOD-Op-kI0" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
