--- a/Ekar/Scenes/Vehicle/Vehicle.storyboard
+++ b/Ekar/Scenes/Vehicle/Vehicle.storyboard
@@ -39,10 +39,10 @@
                                 <rect key="frame" x="0.0" y="88" width="414" height="774"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="ez5-wX-yRD">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="806.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="940"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="G0z-ga-eS0">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="467"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="540"/>
                                                 <subviews>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="cTy-UN-KVI" customClass="CarouselView" customModule="Ekar" customModuleProvider="target">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="200"/>
@@ -52,30 +52,37 @@
                                                         </constraints>
                                                     </view>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4pI-BC-CLg" customClass="BaseLabel" customModule="Ekar" customModuleProvider="target">
-                                                        <rect key="frame" x="20" y="200" width="42" height="20.5"/>
+                                                        <rect key="frame" x="20" y="200" width="42" height="16"/>
                                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="kXn-F2-IiK" customClass="ColorsView" customModule="Ekar" customModuleProvider="target">
-                                                        <rect key="frame" x="70" y="198.5" width="324" height="24"/>
+                                                        <rect key="frame" x="70" y="196" width="324" height="24"/>
                                                         <color key="backgroundColor" systemColor="systemYellowColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="24" id="mI9-G5-gEG"/>
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MYN-vU-Q8d" customClass="BasePriceView" customModule="Ekar" customModuleProvider="target">
-                                                        <rect key="frame" x="20" y="238.5" width="374" height="100"/>
+                                                        <rect key="frame" x="20" y="236" width="374" height="100"/>
                                                         <color key="backgroundColor" systemColor="systemPurpleColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="100" id="qjR-Ss-o5C"/>
                                                         </constraints>
                                                     </view>
                                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="xMQ-Re-ibr" customClass="TenureView" customModule="Ekar" customModuleProvider="target">
-                                                        <rect key="frame" x="20" y="346.5" width="374" height="100"/>
+                                                        <rect key="frame" x="20" y="344" width="374" height="100"/>
                                                         <color key="backgroundColor" systemColor="systemIndigoColor"/>
                                                         <constraints>
                                                             <constraint firstAttribute="height" constant="100" id="BTh-ex-iJL"/>
+                                                        </constraints>
+                                                    </view>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="MKL-Yr-MnA" customClass="BookFeeView" customModule="Ekar" customModuleProvider="target">
+                                                        <rect key="frame" x="20" y="452" width="374" height="80"/>
+                                                        <color key="backgroundColor" systemColor="systemBlueColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="80" id="2mW-Vw-HEm"/>
                                                         </constraints>
                                                     </view>
                                                 </subviews>
@@ -83,27 +90,54 @@
                                                 <constraints>
                                                     <constraint firstItem="MYN-vU-Q8d" firstAttribute="leading" secondItem="G0z-ga-eS0" secondAttribute="leading" constant="20" id="1Vt-b2-ldp"/>
                                                     <constraint firstItem="cTy-UN-KVI" firstAttribute="top" secondItem="G0z-ga-eS0" secondAttribute="top" id="31e-lP-daH"/>
-                                                    <constraint firstAttribute="height" constant="467" id="Cvb-Bv-StW"/>
+                                                    <constraint firstItem="MKL-Yr-MnA" firstAttribute="leading" secondItem="G0z-ga-eS0" secondAttribute="leading" constant="20" id="B1A-rK-r9g"/>
+                                                    <constraint firstAttribute="height" constant="540" id="Cvb-Bv-StW"/>
                                                     <constraint firstAttribute="trailing" secondItem="kXn-F2-IiK" secondAttribute="trailing" constant="20" id="Ftu-xf-KoQ"/>
                                                     <constraint firstItem="kXn-F2-IiK" firstAttribute="centerY" secondItem="4pI-BC-CLg" secondAttribute="centerY" id="H01-te-BOr"/>
+                                                    <constraint firstAttribute="trailing" secondItem="MKL-Yr-MnA" secondAttribute="trailing" constant="20" id="MUt-Ol-7OK"/>
                                                     <constraint firstItem="kXn-F2-IiK" firstAttribute="leading" secondItem="4pI-BC-CLg" secondAttribute="trailing" constant="8" symbolic="YES" id="SHK-p7-wV4"/>
                                                     <constraint firstItem="xMQ-Re-ibr" firstAttribute="top" secondItem="MYN-vU-Q8d" secondAttribute="bottom" constant="8" id="T6A-4y-xfn"/>
                                                     <constraint firstItem="cTy-UN-KVI" firstAttribute="leading" secondItem="G0z-ga-eS0" secondAttribute="leading" id="T7u-SA-Yl0"/>
                                                     <constraint firstItem="4pI-BC-CLg" firstAttribute="top" secondItem="cTy-UN-KVI" secondAttribute="bottom" id="TjB-Kr-G76"/>
+                                                    <constraint firstAttribute="bottom" secondItem="MKL-Yr-MnA" secondAttribute="bottom" constant="8" id="X5t-Um-HTh"/>
                                                     <constraint firstAttribute="trailing" secondItem="xMQ-Re-ibr" secondAttribute="trailing" constant="20" id="Xfr-K3-0B7"/>
                                                     <constraint firstItem="MYN-vU-Q8d" firstAttribute="top" secondItem="kXn-F2-IiK" secondAttribute="bottom" constant="16" id="a4W-Kz-o2Y"/>
                                                     <constraint firstItem="xMQ-Re-ibr" firstAttribute="leading" secondItem="G0z-ga-eS0" secondAttribute="leading" constant="20" id="aL4-8y-1lg"/>
                                                     <constraint firstAttribute="trailing" secondItem="cTy-UN-KVI" secondAttribute="trailing" id="qX6-lz-NgV"/>
+                                                    <constraint firstItem="MKL-Yr-MnA" firstAttribute="top" secondItem="xMQ-Re-ibr" secondAttribute="bottom" constant="8" id="qtI-JA-TLX"/>
                                                     <constraint firstItem="4pI-BC-CLg" firstAttribute="leading" secondItem="G0z-ga-eS0" secondAttribute="leading" constant="20" id="v2D-QE-Mj6"/>
                                                     <constraint firstAttribute="trailing" secondItem="MYN-vU-Q8d" secondAttribute="trailing" constant="20" id="y0d-uI-omG"/>
+                                                </constraints>
+                                            </view>
+                                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="22z-e3-C0J">
+                                                <rect key="frame" x="0.0" y="540" width="414" height="400"/>
+                                                <subviews>
+                                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="SFJ-gh-I26" customClass="AboutVehicleView" customModule="Ekar" customModuleProvider="target">
+                                                        <rect key="frame" x="20" y="8" width="374" height="100"/>
+                                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                        <constraints>
+                                                            <constraint firstAttribute="height" constant="100" id="i39-6Y-d42"/>
+                                                        </constraints>
+                                                    </view>
+                                                </subviews>
+                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <constraints>
+                                                    <constraint firstItem="SFJ-gh-I26" firstAttribute="leading" secondItem="22z-e3-C0J" secondAttribute="leading" constant="20" id="Cyb-5c-VsW"/>
+                                                    <constraint firstItem="SFJ-gh-I26" firstAttribute="top" secondItem="22z-e3-C0J" secondAttribute="top" constant="8" id="lD0-4b-bI9"/>
+                                                    <constraint firstAttribute="trailing" secondItem="SFJ-gh-I26" secondAttribute="trailing" constant="20" id="v20-Pu-8Oz"/>
+                                                    <constraint firstAttribute="height" constant="400" id="v4c-iY-D4E"/>
                                                 </constraints>
                                             </view>
                                         </subviews>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
+                                            <constraint firstItem="22z-e3-C0J" firstAttribute="top" secondItem="G0z-ga-eS0" secondAttribute="bottom" id="10o-YB-pIn"/>
                                             <constraint firstAttribute="trailing" secondItem="G0z-ga-eS0" secondAttribute="trailing" id="53g-Vc-vBv"/>
                                             <constraint firstItem="G0z-ga-eS0" firstAttribute="leading" secondItem="ez5-wX-yRD" secondAttribute="leading" id="C3O-N2-cdz"/>
+                                            <constraint firstItem="22z-e3-C0J" firstAttribute="leading" secondItem="ez5-wX-yRD" secondAttribute="leading" id="Dmr-Cg-dlI"/>
+                                            <constraint firstAttribute="trailing" secondItem="22z-e3-C0J" secondAttribute="trailing" id="MCX-qg-NCD"/>
                                             <constraint firstItem="G0z-ga-eS0" firstAttribute="top" secondItem="ez5-wX-yRD" secondAttribute="top" id="X0h-KX-J9w"/>
+                                            <constraint firstAttribute="bottom" secondItem="22z-e3-C0J" secondAttribute="bottom" id="i3k-pl-Pnx"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -128,7 +162,9 @@
                     </view>
                     <navigationItem key="navigationItem" id="bBa-nS-Je9"/>
                     <connections>
+                        <outlet property="aboutVehicleView" destination="SFJ-gh-I26" id="s8n-f4-EOD"/>
                         <outlet property="basePriceView" destination="MYN-vU-Q8d" id="F93-qG-fFF"/>
+                        <outlet property="bookFeeView" destination="MKL-Yr-MnA" id="827-0S-mN2"/>
                         <outlet property="carouselView" destination="cTy-UN-KVI" id="E95-XD-KT2"/>
                         <outlet property="colorsView" destination="kXn-F2-IiK" id="THt-YD-oG9"/>
                         <outlet property="tenureView" destination="xMQ-Re-ibr" id="Wg9-J9-FKF"/>
@@ -144,6 +180,9 @@
     <resources>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemBlueColor">
+            <color red="0.0" green="0.47843137254901963" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemIndigoColor">
             <color red="0.34509803921568627" green="0.33725490196078434" blue="0.83921568627450982" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
