--- a/Ekar/Views/ColorView/ColorsView.xib
+++ b/Ekar/Views/ColorView/ColorsView.xib
@@ -11,32 +11,18 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ColorsView" customModule="Ekar" customModuleProvider="target">
             <connections>
-                <outlet property="collectionView" destination="rYq-uK-649" id="dGQ-5F-lll"/>
-                <outlet property="collectionViewWidth" destination="v31-2p-56M" id="Z7x-wV-Qrc"/>
+                <outlet property="stackView" destination="6Kb-pg-6Cd" id="tq0-30-WBD"/>
+                <outlet property="stackViewWidth" destination="FnQ-ux-f0O" id="W2Z-lL-gp5"/>
                 <outlet property="titleLabel" destination="CSZ-bb-2Rb" id="xTL-mZ-ssL"/>
             </connections>
         </placeholder>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <view contentMode="scaleToFill" id="iN0-l3-epB">
-            <rect key="frame" x="0.0" y="0.0" width="476" height="290"/>
+            <rect key="frame" x="0.0" y="0.0" width="549" height="31"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" dataMode="none" translatesAutoresizingMaskIntoConstraints="NO" id="rYq-uK-649">
-                    <rect key="frame" x="424" y="140" width="44" height="10"/>
-                    <color key="backgroundColor" systemColor="systemBackgroundColor"/>
-                    <constraints>
-                        <constraint firstAttribute="height" constant="10" id="dgR-J9-4B0"/>
-                        <constraint firstAttribute="width" constant="44" id="v31-2p-56M"/>
-                    </constraints>
-                    <collectionViewFlowLayout key="collectionViewLayout" minimumLineSpacing="10" minimumInteritemSpacing="10" id="QEL-yr-54M">
-                        <size key="itemSize" width="128" height="128"/>
-                        <size key="headerReferenceSize" width="0.0" height="0.0"/>
-                        <size key="footerReferenceSize" width="0.0" height="0.0"/>
-                        <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
-                    </collectionViewFlowLayout>
-                </collectionView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Available colors" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="CSZ-bb-2Rb" customClass="BaseLabel" customModule="Ekar" customModuleProvider="target">
-                    <rect key="frame" x="298" y="137" width="118" height="16"/>
+                    <rect key="frame" x="407" y="0.0" width="118" height="16"/>
                     <constraints>
                         <constraint firstAttribute="height" constant="16" id="z8t-Q0-7oU"/>
                     </constraints>
@@ -44,17 +30,25 @@
                     <nil key="textColor"/>
                     <nil key="highlightedColor"/>
                 </label>
+                <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="6Kb-pg-6Cd">
+                    <rect key="frame" x="533" y="4" width="16" height="8"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="8" id="EJf-SF-iOZ"/>
+                        <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="16" id="FnQ-ux-f0O"/>
+                        <constraint firstAttribute="width" constant="16" placeholder="YES" id="GpS-hC-EB5"/>
+                    </constraints>
+                </stackView>
             </subviews>
             <viewLayoutGuide key="safeArea" id="vUN-kp-3ea"/>
             <color key="backgroundColor" systemColor="systemBackgroundColor"/>
             <constraints>
-                <constraint firstItem="vUN-kp-3ea" firstAttribute="trailing" secondItem="rYq-uK-649" secondAttribute="trailing" constant="8" id="Mug-3G-RvU"/>
-                <constraint firstItem="rYq-uK-649" firstAttribute="leading" secondItem="CSZ-bb-2Rb" secondAttribute="trailing" constant="8" symbolic="YES" id="OaU-Gi-Hl7"/>
-                <constraint firstItem="rYq-uK-649" firstAttribute="centerY" secondItem="CSZ-bb-2Rb" secondAttribute="centerY" id="mbJ-tP-VH0"/>
-                <constraint firstItem="CSZ-bb-2Rb" firstAttribute="centerY" secondItem="iN0-l3-epB" secondAttribute="centerY" id="xN9-nh-0f3"/>
+                <constraint firstAttribute="trailing" secondItem="6Kb-pg-6Cd" secondAttribute="trailing" id="FgM-na-XKT"/>
+                <constraint firstItem="6Kb-pg-6Cd" firstAttribute="centerY" secondItem="CSZ-bb-2Rb" secondAttribute="centerY" id="JgW-QI-lwk"/>
+                <constraint firstItem="CSZ-bb-2Rb" firstAttribute="top" secondItem="vUN-kp-3ea" secondAttribute="top" id="OcO-og-GAa"/>
+                <constraint firstItem="6Kb-pg-6Cd" firstAttribute="leading" secondItem="CSZ-bb-2Rb" secondAttribute="trailing" constant="8" id="UYR-Yf-LaX"/>
             </constraints>
             <freeformSimulatedSizeMetrics key="simulatedDestinationMetrics"/>
-            <point key="canvasLocation" x="219.19999999999999" y="-20.689655172413794"/>
+            <point key="canvasLocation" x="277.60000000000002" y="-137.18140929535232"/>
         </view>
     </objects>
     <resources>
